--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version '2.6.2'
+    id("io.spring.dependency-management") version "1.1.4"
     id 'java'
 }
 
@@ -10,10 +12,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'jakarta.annotation:jakarta.annotation-api:1.3.5'
-    implementation 'org.springframework:spring-core:5.3.13'
-    implementation 'org.springframework:spring-context:5.3.13'
-    implementation 'javax.inject:javax.inject:1'
+    implementation 'org.springframework.boot:spring-boot-starter' // core, autoconfiduration, logging, YAML
+    /*
+    include: spring-core, spring-context, jakarta-annotation-api
+     */
+
+    implementation 'org.postgresql:postgresql'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
