--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.springframework.boot' version '2.6.2'
     id("io.spring.dependency-management") version "1.1.4"
+    id 'io.freefair.lombok' version '6.3.0'
     id 'java'
 }
 
@@ -12,13 +13,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter' // core, autoconfiduration, logging, YAML
+    implementation 'org.springframework.boot:spring-boot-starter' // core, autoconfiguration, logging, YAML
     /*
     include: spring-core, spring-context, jakarta-annotation-api
      */
 
     implementation 'org.postgresql:postgresql'
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
