--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-db.username=postgres
+db.username=${username.value:postgres}
 db.password=pass
 db.poolSize=12
 db.driver=PostgresDriver
 db.url=postgres:5432
 db.hosts=localhost, 127.0.0.1
-spring.profiles.active=prod
+spring.profiles.active=qa
