--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,11 @@ db:
       timeout: 3
 spring:
    profiles.active:qa
+
+logging:
+  file:
+    name: tyz.log
+    path: /
+  level:
+   root: WARN
+   org.example.spring.database.pool.ConnectionPool: INFO
