starter-data-jpa

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ dependencies {
     /*
     include: spring-core, spring-context, jakarta-annotation-api
      */
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    /*
+include: jakarta-persistence, jakarta-transaction
+hibernate, aop, jdbc, HikariCP - connection pool, witch use data jpa default
+ */
     implementation 'org.postgresql:postgresql'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
