--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,8 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
    properties.hibernate:
+     fetch_size: 50
+     batch_size: 50
      show_sql: true
      format_sql: true
      hbm2ddl.auto: validate
@@ -39,3 +41,4 @@ logging:
   level:
    root: INFO
    org.example.spring.database.pool.ConnectionPool: INFO
+   org.springframework.jdbc.core: TRACE #DEBUG - without parameters
