--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id 'java'
 }
 
+apply from: 'version.gradle'
+
 group 'org.example'
 version '1.0-SNAPSHOT'
 
@@ -36,11 +38,15 @@ hibernate, aop, jdbc, HikariCP - connection pool, witch use data jpa default
     /*
 include junit, jupiter
 */
+    // testImplementation 'com.h2database:h2'
+
+    testImplementation "org.testcontainers:postgresql:${versions.testcontainers}"
+
 }
 
 querydsl {
     jpa = true
-    library = 'com.querydsl:querydsl-apt:5.0.0'
+    library = "com.querydsl:querydsl-apt:${versions.querydsl}"
     querydslSourcesDir = "$buildDir/generated/sources/annotationProcessor/java/main"
 }
 
