--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,11 +4,9 @@ db:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:test
-    username:
-    password:
-    driver-class-name: org.h2.Driver
+    username: test
+    password: test
   jpa:
     properties.hibernate:
-      hbm2ddl.auto: update
+      hbm2ddl.auto: validate
 
