--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ configurations {
 }
 
 dependencies {
-    implementation 'javax.validation:validation-api'
+    implementation "org.springdoc:springdoc-openapi-ui:${versions.springdoc}"
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     /*
     include: json, starter-tomcat, spring-web, spring-webmvc
