--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ configurations {
 dependencies {
     implementation "org.springdoc:springdoc-openapi-ui:${versions.springdoc}"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     /*
     include: json, starter-tomcat, spring-web, spring-webmvc
